building up slowly

--- a/index.html
+++ b/index.html
@@ -146,11 +146,16 @@
                 <br>
                 <br>
 
-                <img class="img-responsive img-centered" src="safinah-thumb.png" alt="">
+                <img class="img-responsive img-centered img-circle"
+                     src="prachi.png" alt="">
 
                 <br><br><br>
 
-                <p style = "font-size : 20px" class = "text-center"> Hi, I am Safinah. I am a Human Robot Interaction Designer. I like making and breaking things. Sometimes I like teaching things. This website is running 3 years behind my life (oop!) Return in a few weeks to see an updated version. In the meanwhile stay hydrated and keep making things. </p>
+                <p style = "font-size : 20px" class = "text-center">
+                    Hey there!,
+                    I am Prachi Palod.
+                    I am a Software Engineer by profession and creative
+                    designer by passion. I love to CODE and play games!</p>
                 <br><br>
 
                 <!-- <p style = "font-size : 15px" class = "text-center">I am currently a grad student at <a href = "https://www.media.mit.edu/" target="_blank"><b>MIT Media Lab</b></a>. My work is about leveraging Social Robots for education. I graduated with a Master's in Human Computer Interaction from <a href="https://www.hcii.cmu.edu/" target="_blank"><b>Carnegie Mellon University</b></a>. I like tinkering with art and technology, and think and write about <b><a href="https://uxdesign.cc/the-suggested-web-is-killing-discovery-47e4afcf4f4d#.8bo7ra48v" target="_blank">machine ethics</b></a>. I care about building meaningful experiences and making technology accessible to all. <br><br>  -->
@@ -320,7 +325,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/nagpur.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/chotu-prachi.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -340,11 +345,24 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2011-2015</h4>
-                                    <h4 class="subheading">Bachelor's in Design, IIT Guwahati</h4>
+                                    <h4>2014-2018</h4>
+                                    <h4>DA-IICT, Gandhinagar</h4>
+                                    <h4 class="subheading">B.Tech in
+                                        Information and Communication
+                                        Technology</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Learned to design a thing or two. Met the smartest people. Built stuff. Broke stuff. Learned to fix stuff. Designed my first product.</p>
+                                    <ul>
+                                    <li><p class="text-muted">Learned
+                                        advanced Programming and
+                                        Software Engineering. </p>
+                                    <li><p class="text-muted">Fostered Leadership
+                                        and Communication Skills.</p>
+                                    <li><p class="text-muted">Internships and
+                                        several academic projects.
+                                        Developed first
+                                        real product.</p>
+                                        </ul>
                                 </div>
                             </div>
                         </li>
@@ -355,11 +373,18 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Summer 2013</h4>
-                                    <h4 class="subheading">UX Design Intern, Fractal Ink Design Studio</h4>
+                                    <h4>Winter 2018</h4>
+                                    <h4 class="subheading">Software
+                                        Engineering Intern</h4>
+                                    <h4 class="subheading">Infocusp
+                                        Innovation Pvt. Ltd.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Kept my eyes and ears open. Got my hands dirty trying a range of UX practices. Took ownership of my projects. Worked directly with clients. Was guided by amazing mentors. Designed beautiful interfaces. </p>
+                                        <p class="text-muted">Lead developer for
+                                        an AI-based 3D car racing game, "Feel
+                                            The Race". </p>
+                                        <p class="text-muted">Tech Stack:
+                                        Unity, Visual Studio</p>
                                 </div>
                             </div>
                         </li>
