--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/graph-thumb.JPG" class="img-responsive" alt="">
+                        <img src="img/about/agnetix.png"
+                             class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Agnetix</h4>
@@ -205,7 +206,8 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/faces-thumb.png" class="img-responsive" alt="">
+                        <img src="img/about/legalsifter.png"
+                             class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>LegalSifter</h4>
@@ -220,7 +222,8 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/amazon-thumb.jpg" class="img-responsive" alt="">
+                        <img src="img/about/bryte.png" class="img-responsive"
+                             alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Bryte</h4>
