building up slowly

--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/fractal-thumb.jpg" class="img-responsive" alt="">
+                        <img src="img/about/ftr.jpg"
+                             class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Feel The Race</h4>
@@ -253,7 +254,8 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/techniche-thumb.png" class="img-responsive" alt="">
+                        <img src="img/about/factset.png" class="img-responsive"
+                             alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Error Budgets & Developer Insight</h4>
