--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
                     <br><br>
                 </div>
 
@@ -418,7 +418,7 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
                     <br><br>
                 </div>
 
@@ -434,8 +434,8 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
                     <br><br><br><br>
 
                 </div>
@@ -454,7 +454,7 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
 
                 </div>
 
@@ -472,7 +472,7 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
 
                 </div>
 
@@ -490,7 +490,7 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
 
                 </div>
 
@@ -507,7 +507,7 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
                 </div>
 
             </center>
@@ -541,7 +541,7 @@
                                         beautiful town. Extremely pampered by
                                         parents. Made life-long friends.
                                         Studious. Enjoyed playing computer
-                                        games. Loved traveling, dancing, art
+                                        games. Loved travelling, dancing, art
                                         and craft.
                                     </p>
                                 </div>
@@ -590,14 +590,14 @@
                                     <h4 class="subheading">Software
                                         Engineering Intern</h4>
                                     <h4 class="subheading">Infocusp
-                                        Innovation Pvt. Ltd.</h4>
+                                        Innovations Pvt. Ltd.</h4>
                                 </div>
                                 <div class="timeline-body">
                                         <p class="text-muted">Lead developer for
                                         an AI-based 3D car racing game, "Feel
                                             The Race". </p>
                                         <p class="text-muted">Tech Stack:
-                                        Unity, Visual Studio</p>
+                                        C#, Unity, Visual Studio</p>
                                 </div>
                             </div>
                         </li>
@@ -610,11 +610,15 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2018 - December 2018</h4>
-                                    <h4 class="subheading">Creative Lead, Techniche</h4>
+                                    <h4>June 2018 - December 2018</h4>
+                                    <h4 class="subheading">Software Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Joined Techniche (the annual techno-management festival of IIT Guwahati) as a designer in 2012. Led a team of 12 designers to strategize branding and overall design requirements of the 2014 edition of Techniche. </p>
+                                    <p class="text-muted"> Joined Factset as a Software Engineer
+                                        and worked  on two of their internal projects. Designed and developed
+                                        web portals to constantly monitor the current status of all the projects in
+                                        FactSet. </p>
+                                    <p class="text-muted">Tech Stack: Vue.js, Node.js</p>
                                 </div>
                             </div>
                         </li>
@@ -631,14 +635,16 @@
                                     <h4 class="subheading">Software
                                         Engineer</h4>
                                     <h4 class="subheading">Infocusp
-                                        Innovation Pvt. Ltd.</h4>
+                                        Innovations Pvt. Ltd.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                        <p class="text-muted">Lead developer for
-                                        an AI-based 3D car racing game, "Feel
-                                            The Race". </p>
-                                        <p class="text-muted">Tech Stack:
-                                        Unity, Visual Studio</p>
+                                        <p class="text-muted">Worked as a Full Stack Developer for client Agnetix.</p>
+                                        <p class="text-muted">Tech Stack: React.js, MongoDB, InfluxDB, Node.js</p>
+                                        <p class="text-muted">Working as an ML Engineer for client
+                                    Legalsifter.</p>
+                                        <p class="text-muted">Tech Stack: Python, sklearn, Jupyter</p>
+                                        <p class="text-muted">Working as a Front end developer for client Bryte.</p>
+                                        <p class="text-muted">Tech Stack: React.js</p>
                                 </div>
                             </div>
                         </li>
@@ -1120,7 +1126,7 @@
                                 
                                 <div class="col-lg-6 col-md-6 col-sm-12">
                                     
-                                    <p>As a part of our course, Interaction Design, we wanted to explore the domain of food and travel, and come up with a service that makes the food experience while traveling easier. We started by identifying the problem space, the stakeholders involved, and the needs of the stakeholders. We identified that a food exploration does not just influence the explorer, but a variety of stakeholders like local people, businesses, hotel owners, and other travelers. We made a map that categorizes these stakeholders in potential ‘Users’, ‘Affected’, and ‘Influential’ for our service. </p>
+                                    <p>As a part of our course, Interaction Design, we wanted to explore the domain of food and travel, and come up with a service that makes the food experience while travelling easier. We started by identifying the problem space, the stakeholders involved, and the needs of the stakeholders. We identified that a food exploration does not just influence the explorer, but a variety of stakeholders like local people, businesses, hotel owners, and other travelers. We made a map that categorizes these stakeholders in potential ‘Users’, ‘Affected’, and ‘Influential’ for our service. </p>
 
                                     <p>We further went on to draw an empathy map of the user, which involved understanding what each stakeholder thought, saw, said, did and heard about the domain, which was food in a new location here. We also identified the activities that these users carry out in a particular environment and the objects these interactions include. We further explored what pains and gains these interactions involved. </p>
                                 </div>
