removed extra content

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                 <!-- Python -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="Python"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/python.jpeg" ></a>
                     </div>
@@ -293,8 +293,8 @@
                 <!-- Java -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="Java"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/java.png" ></a>
                     </div>
@@ -310,8 +310,8 @@
                 <!-- C -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="C"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/c.png" ></a>
                     </div>
@@ -327,8 +327,8 @@
                 <!-- HTML -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="HTML"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/html.jpg" ></a>
                     </div>
@@ -344,8 +344,8 @@
                 <!-- CSS -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="CSS"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/css.jpeg" ></a>
                     </div>
@@ -361,8 +361,8 @@
                 <!-- ReactJS -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="ReactJS"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/react.png" ></a>
                     </div>
@@ -378,8 +378,8 @@
                 <!-- VueJS -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="VueJS"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/vue.jpg" ></a>
                     </div>
@@ -395,8 +395,8 @@
                 <!-- Angular -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="AngularJS"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/angular.jpeg" ></a>
                     </div>
@@ -413,8 +413,8 @@
                 <!-- MongoDB -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="MongoDB"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/mongodb.jpg" ></a>
                     </div>
@@ -431,8 +431,8 @@
                 <!-- InfluxDB -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="InfluxDB"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/influxdb.png" ></a>
                     </div>
@@ -449,8 +449,8 @@
                 <!-- MySQL -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="MySQL"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/mysql.jpg" ></a>
                     </div>
@@ -467,8 +467,8 @@
                 <!-- Unity -->
                 <div class="col-sm-3">
                     <div class="circular">
-                                    <a href = "https://www.daiict.ac.in/" target="_blank" alt="">
                                     <img
+                                            title="Unity"
                                             class="img-circle img-thumbnail img-responsive "
                                          src="img/skills/unity.png" ></a>
                     </div>
@@ -903,7 +903,7 @@
     </div>
 
 
-    <!-- Portfolio Modal 4 -->
+     Portfolio Modal 4
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
