--- a/index.html
+++ b/index.html
@@ -902,8 +902,8 @@
         </div>
     </div>
 
+    <!-- Portfolio Modal 4 -->
 
-     Portfolio Modal 4
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -917,14 +917,53 @@
                     <div class="col-lg-12 col-lg-offset-0">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>yet to be updated</h2>
+                            <h2>Error Budgets and Developer Insight</h2>
+                            <p class="item-intro text-muted">
+                                <b>Error Budgets:</b> Error Budgets are designed to provide transparency into which services
+                                are not meeting their desired stability targets. This in turn helps guide investment towards
+                                improving stability of a given service. Error Budgets are computed based on a service or
+                                infrastructure defining its Service Level Target (SLT) for its uptime. Given a SLT, we can
+                                compute number of failures a service is allowed to have within a defined time frame.
+                                Stability Engineering built upon concepts of Error Budgets to create a tool for greater
+                                transparency and uniform monitoring across many of our services and key infrastructures.
+                                <br>
+                                <b>Developer Insight:</b> One stop solution for
+                                managers and developers to analyse their respective projects. A way to
+                                summarize all the data that sonarCube produced as well as any other
+                                information that we want to analyse, different platforms and then aggregate
+                                that and then streamline that data in this portal. Make it easy to
+                                add any new data. We have projects, deps file, for a given deps file we
+                                suck in sub-data from sonarCube and display it in a table by API call.
+                                <br>
+                                The technologies used are Python for fetching data, Vue.js in Frontend and Node.js in Backend.
+                            </p>
+
+                            <ul class="list-inline">
+                                <li><b>Timeline:</b> June - December 2018</li>
+                                <li><b>Client:</b> FactSet Research Systems Inc.</li>
+                                <li><b>Mentors:</b> Raghavendar Nagamandla (Manager)</li>
+                            </ul>
+
+                            <h3>Error Budgets</h3>
+
+                            <img class="img-responsive img-centered" src="img/portfolio/eb4.PNG" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/eb3.PNG" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/eb2.PNG" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/eb1.PNG" alt="">
+
+                            <h3>Developer Insight</h3>
+
+                            <img class="img-responsive img-centered" src="img/portfolio/di1.PNG" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/di2.PNG" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/di3.PNG" alt="">
+
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 
        <!-- Portfolio Modal 5 -->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
