updated factset content

--- a/index.html
+++ b/index.html
@@ -926,7 +926,8 @@
                                 compute number of failures a service is allowed to have within a defined time frame.
                                 Stability Engineering built upon concepts of Error Budgets to create a tool for greater
                                 transparency and uniform monitoring across many of our services and key infrastructures.
-                                <br>
+                            </p>
+                            <p class="item-intro text-muted">
                                 <b>Developer Insight:</b> One stop solution for
                                 managers and developers to analyse their respective projects. A way to
                                 summarize all the data that sonarCube produced as well as any other
