added data for online virtual classroom

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-12 col-sm-6 portfolio-item">
+                <div class="col-md-6 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -226,6 +226,22 @@
                     <div class="portfolio-caption">
                         <h4>Feel The Race</h4>
                         <p class="text-muted">Game Developer</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/about/vc.jpg" class="img-responsive"
+                             alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Online Virtual Classroom</h4>
+                        <p class="text-muted">Frontend Designer and Developer</p>
                     </div>
                 </div>
 
@@ -1028,6 +1044,128 @@
         </div>
     </div>
 
+    <!-- Portfolio Modal 6 -->
+
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-lg-offset-0">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Online Virtual Classroom</h2>
+                            <p class="item-intro text-muted">Today in the world of digital things,
+                                traditional classes are being replaced by the virtual classrooms or digital
+                                classrooms. A benefit to taking online courses is that they offer flexibility
+                                to the student. This is a great option for those who already have time
+                                commitments with family and work. Online classes will mold with your schedule
+                                and allow you to log into your online course at a time that works best for you,
+                                as opposed to having to attend a lecture at a specific time. My tasks involved
+                                designing mockup designs and developing front end using HTML, CSS, JavaScript and establishing communication
+                                with backend using PHP.
+                            </p>
+
+                            <ul class="list-inline">
+                                <li><b>Timeline:</b> August 2017 - December 2017</li>
+                                <li><b>Mentor:</b> Professor Prasenjit Majumder</li>
+                            </ul>
+
+                            <h3>Features implemented to push low fidelity to high fidelity model</h3>
+                            <ul>
+                                <li>
+                                    <b>Whiteboard:</b> To increase interaction and ease of communication between professors
+                                    and students.
+                                </li>
+                                <li>
+                                    <b>Chatbox:</b> To help students discuss their queries and to
+                                    create normal interaction between students.
+                                </li>
+                                <li>
+                                    <b>Video Library:</b> To help professor use/open any video during lectures.
+
+                                </li>
+                                <li>
+                                    <b>Book Library:</b> To make storage of all documents easy for users.
+
+                                </li>
+                                <li>
+                                    <b>Notes:</b> For helping students to take quick notes
+
+                                </li>
+                                <li>
+                                    <b>Raise Hand:</b> To make interface easy for students to ask queries
+
+                                </li>
+                                <li>
+                                    <b>Help Assistant:</b> To entertain system and interface related doubts.
+
+                                </li>
+                                <li>
+                                    <b>Screenshot:</b> To help the student save any particular whiteboard screen.
+
+                                </li>
+                                <li>
+                                    <b>Categorization:</b> The courses were categorized in different fields to provide easy searching.
+
+                                </li>
+                            </ul>
+
+                            <h3>Tools and Technologies used</h3>
+                            <ul>
+                                <li>
+                                    <b>Whiteboard Fox API</b> is used for whiteboard implementation.
+                                </li>
+                                <li>
+                                    <b>Appear.in API</b> used for video conferencing.
+                                </li>
+                                <li>
+                                    The server side scripting language used is <b>PHP</b>.
+                                </li>
+                                <li>
+                                    Software tool used to handle administration of MySQL is <b>phpMyAdmin</b>.
+                                </li>
+                                <li>
+                                    Languages used for coding web pages are <b>HTML, CSS, JavaScript</b>.
+                                </li>
+                                <li>
+                                    Chat API used of <b>chatovod.com</b>.
+                                </li>
+                                <li>
+                                    <b>Help Assistant:</b> To entertain system and interface related doubts.
+
+                                </li>
+                                <li>
+                                    <b>Atom</b> used for integration of all the pages.
+                                </li>
+                                <li>
+                                    <b>Sketch app</b> used for editing pictures.
+                                </li>
+                                <li>
+                                    <b>Balsamiq tool</b> used for making mockups.
+
+                                </li>
+                            </ul>
+
+                            <p class="custom">All the information regarding this project can be found
+                                <a target="_blank" href="https://docs.google.com/document/d/1RPQ6u3nh9aNvFFqoGYm5YIoGpS5zNQNa-G-qzcsG_Ao/edit?usp=sharing">
+                                    <b>here </b>
+                                </a>
+                            </p>
+
+                            </div>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
