--- a/index.html
+++ b/index.html
@@ -713,8 +713,12 @@
                             <h2>AGNETIX - World's most powerful and efficient horticulture lighting</h2>
                             <p class="item-intro text-muted">Agnetix is a client based in California. I was the lead Software
                                 Developer for developing the web application. The web application controls the light and room
-                                parameters. The technology stack includes React.js in front end and Node.js, MongoDB and InfluxDB in back end.
-                                It also contains hardware (light) and to constantly maintain communication between front end, back end and hardware was
+                                parameters. I had the responsibility of architecting and developing the complete
+                                UI of the desktop application in a short span of 4 months. I designed several mock
+                                ups for various pages of the application. The complexity of constantly maintaining the
+                                communication between software & hardware and appropriately modifying the backend
+                                codebase made the task more challenging. The technology stack includes React.js in
+                                front end and Node.js, MongoDB and InfluxDB in back end. It also contains hardware (light) and to constantly maintain communication between front end, back end and hardware was
                                 the most challenging task in the project.
 
                             </p>
@@ -842,9 +846,11 @@
                                 3D racing game for various platforms with Unity being the primary tool for development.
                                 The main aim of the project is to give the gamers a feel of Indian terrains and environment
                                 like roads with potholes, bumpers, and rash driving by other drivers which has not been done before.
-                                The work mentioned in this paper includes implementation of various UI and non-UI features and deployment
-                                of the game on various platforms like Android and iOS. Thorough research and use of novel algorithms were
-                                required for some tasks. I was the lead software developer on Feel The Race and built the game from scratch.
+                                The work includes implementation of various UI and non-UI features and deployment of the game on various platforms
+                                like Android and iOS. Thorough research and use of novel algorithms were required for some tasks.
+                                I was the lead software developer on Feel The Race and built the game from scratch. My role was to implement novel algorithms
+                                and develop racing features (movements, turning, brakes, collision, etc) and real-time graphics along with
+                                UI integration in Unity. The project underwent rigorous testing on iOS and Android platforms.
                                 Along with the development of the game with different features, I worked on the integration of
                                 UI elements in Unity, implementation of Ghost Race, deploying and testing the project on Android and iOS devices.</p>
 
@@ -952,8 +958,15 @@
                                 add any new data. We have projects, deps file, for a given deps file we
                                 suck in sub-data from sonarCube and display it in a table by API call.
                                 <br>
-                                The technologies used are Python for fetching data, Vue.js in Frontend and Node.js in Backend.
+                                Both the projects were large-scale-management portal that displays the details of
+                                all the products of FactSet and accurately notifies the owner of the project in case
+                                of discrepancies. My full-stack responsibilities involved writing optimized
+                                APIs to fetch a large amount of data from the server, implementing
+                                the back-end using Python & Node.js, developing a user-friendly front-end using
+                                Vue.js and finally deploying the project to production for its targeted users.
                             </p>
+
+                            <
 
                             <ul class="list-inline">
                                 <li><b>Timeline:</b> June - December 2018</li>
@@ -997,10 +1010,13 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>LegalSifter</h2>
-                            <p class="item-intro text-muted">LegalSifter is a platform aiding lawyers and their associates in finding key terms, clauses, and concepts
-                                within a legal contract using sophisticated machine learning and natural language processing techniques.
-                                My tasks includes developing a Machine learning tool with various functionalities to extract legal sentences
-                                and clauses from legal documents using Natural language Processing. Implemented multiple classifiers for many legal concepts.
+                            <p class="item-intro text-muted">LegalSifter is a platform aiding lawyers and their associates in finding key
+                                terms, clauses, and concepts within a legal contract using sophisticated machine learning and natural
+                                language processing techniques. My tasks includes developing a Machine learning tool with various
+                                functionalities to extract legal sentences and clauses from legal documents using Natural language
+                                Processing. Implemented multiple classifiers for many legal concepts. From sifter kickoff to model packaging,
+                                I worked closely with product owners and the annotation team who would assist me in understanding
+                                the legal concept upon which I would feature engineer the models and achieve at least 93% F1-score.
                                 Technologies used: Pandas, sklearn, spaCy, Stanford CoreNLP and Jupyter.</p>
 
                             <h3> Why Legalsifter? </h3>
