--- a/index.html
+++ b/index.html
@@ -678,8 +678,8 @@
                         </li>
                         <li><a href="https://www.linkedin.com/in/prachi-palod/" target="_blank"><i class="fa fa-linkedin"></i></a>
                         </li>
-                        <li><a href="https://www.instagram.com/prachipalod_" target="_blank"><i class="fa fa-instagram"></i></a>
-                        </li>
+<!--                        <li><a href="https://www.instagram.com/prachipalod_" target="_blank"><i class="fa fa-instagram"></i></a>-->
+<!--                        </li>-->
                     </ul>
                 </div>
                 <div class="col-md-4">
