--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
                 <p style = "font-size : 20px" class = "text-center">
                     Hey there!
                     I am Prachi Palod.
-                    I am a Software Engineer by profession and creative
-                    designer by passion. I love to CODE and play games!</p>
+                    I am a graduate student at University of Southern California.
+                    I am majoring in Computer Science.
+                    I love to CODE and play games!</p>
             </div>
         </div>
         </div>
@@ -657,7 +658,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Reach out</h2>
                     <h3 class="section-subheading text-muted">I would love to hear from you! <br><br><a href="mailto:prachipalod15996@gmail.com">prachipalod15996@gmail.com</a><br><br>
-                        Infocusp Innovations Pvt. Ltd. | Ahmedabad, India</h3>
+                        University of Southern California | Los Angeles, CA</h3>
                 </div>
             </div>
             
